# SClaw

./: .gitattributes  .gitignore  CLAUDE.md  CODEX.md  Cargo.toml  Dockerfile  Dockerfile.test  FEATURE_PARITY.md  README.iron.md  README.md  README.ru.md  README.zh-CN.md  build.rs  deny.toml  feishu.md  providers.json  release-plz.toml  start-ironclaw.sh  start_with_office.sh  密态SClaw加解密方案.md
benches/: safety_check.rs  safety_pipeline.rs
channels-src/discord/: Cargo.toml  README.md  discord.capabilities.json
channels-src/discord/src/: lib.rs
channels-src/feishu/: Cargo.toml  build.sh  feishu.capabilities.json
channels-src/feishu/src/: lib.rs
docs/: JINGHUA_CONFIDENTIAL_SIDECAR_ACCEPTANCE.md  LLM_PROVIDERS.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_tool_params.rs
icon/: SClaw.icns
migrations/: V13__owner_scope_notify_targets.sql  V6__routines.sql
registry/: _bundles.json
scripts/: check-boundaries.sh  check_no_panics.py  dev-setup.sh  package-macos-dmg.sh  pre-commit-safety.sh  test-ci-artifact-naming.sh
sidecar/: package.json
src/: app.rs  bootstrap.rs  error.rs  lib.rs  main.rs  service.rs  settings.rs  sidecar.rs
tests/: batch_query_tests.rs  config_round_trip.rs  e2e_builtin_tool_coverage.rs  e2e_metrics_test.rs  e2e_routine_heartbeat.rs  e2e_thread_id_isolation.rs  e2e_tool_param_coercion.rs  gateway_workflow_integration.rs  import_openclaw.rs  import_openclaw_comprehensive.rs  import_openclaw_e2e.rs  import_openclaw_errors.rs  import_openclaw_idempotency.rs  import_openclaw_integration.rs  openai_compat_integration.rs  (+3 more)
(+324 files in other folders)
