[package]
name = "feishu-channel"
version = "0.1.0"
edition = "2021"
description = "Feishu/Lark Bot channel for IronClaw"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# WIT bindgen for WASM component model
wit-bindgen = "0.36"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Exclude from parent workspace (this is a standalone WASM component)

[profile.release]
# Optimize for size
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[workspace]
